--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -363,6 +363,7 @@
                            settings.Properties.EditFormatString = "dd/MM/yyyy";
                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           settings.Properties.ClientSideEvents.DateChanged = "function(s,e){FechaRetencion.SetValue(s.GetValue());}";
                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.co_FechaContabilizacion, "", new { @class = "text-danger" })
                     </div>
@@ -569,7 +570,26 @@
                                             @Html.ValidationMessageFor(q => q.info_retencion.NumRetencion, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
-
+                                    <div class="col-md-2" id="FechaRetencion">
+                                        <div class="form-group">
+                                            <label for="FechaRetencion">Fecha*</label>
+                                            <div class="input-group date">
+                                                <div class="input-group-addon">
+                                                    <i class="fa fa-calendar"></i>
+                                                </div>
+                                                @Html.DevExpress().DateEditFor(q => q.FechaRetencion, settings =>
+                                                   {
+                                                       settings.Name = "FechaRetencion";
+                                                       settings.Properties.UseMaskBehavior = true;
+                                                       settings.Properties.EditFormat = EditFormat.Date;
+                                                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);                                                       
+                                                   }).GetHtml()
+                                                @Html.ValidationMessageFor(q => q.FechaRetencion, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
@@ -1144,7 +1164,7 @@
                     $("#serie1").attr('readonly', false);
                     $("#serie2").attr('readonly', false);;
                     $("#NumRetencion").attr('readonly', false);
-
+                    $("#FechaRetencion").attr('readonly', false);
                     if (data.data_puntovta != null) 
                     {
                         if (data.data_puntovta.EsElectronico == true) 
@@ -1152,12 +1172,14 @@
                             $("#datos_punto_venta1").hide();
                             $("#datos_punto_venta2").hide();
                             $("#datos_punto_venta3").hide();
+                            $("#FechaRetencion").show();
                         }
                         else 
                         {
                             $("#datos_punto_venta1").show();
                             $("#datos_punto_venta2").show();
                             $("#datos_punto_venta3").show();
+                            $("#FechaRetencion").show();
 
                             if (data.data_talonario != null) 
                             {
@@ -1173,10 +1195,12 @@
                     $("#serie1").attr('readonly', true);
                     $("#serie2").attr('readonly', true);;
                     $("#NumRetencion").attr('readonly', true);
+                    $("#FechaRetencion").attr('readonly', true);
 
                     $("#datos_punto_venta1").show();
                     $("#datos_punto_venta2").show();
-                    $("#datos_punto_venta3").show();                
+                    $("#datos_punto_venta3").show(); 
+                    $("#FechaRetencion").show();
                 }
             },
             error: function (error) {
