--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_008.cshtml
@@ -63,7 +63,7 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal</label>
 
@@ -112,8 +112,13 @@
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
-
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="TipoComprobante">Tipo Comprobante</label>
+                            @Html.DropDownListFor(q => q.IdTipoCbte, new SelectList(ViewBag.lst_TipoCbte, "IdTipoCbteCble", "CodTipoCbteBan"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha inicio</label>
