--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_001.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
 @{
     ViewBag.Title = "INV_001";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,20 +9,23 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdSucursal)
+    @Html.HiddenFor(q => q.IdBodega)
+    @Html.HiddenFor(q => q.IdMovi_inven_tipo)
+    @Html.HiddenFor(q => q.IdNumMovi)
+
     if (@ViewBag.Aprobar == "S")
     {
         <div class="row">
             <div class="col-md-12">
-                <div class="col-md-1">
-                    <input type="hidden" id="SecuencialID" name="SecuencialID" value="@ViewBag.SecuencialID" />
-                    <div class="form-group">
-                        <button type="button" class="btn btn-primary form-control" id="btn_aprobar" onclick="AprobarMovimiento();" title="Aprobar">
-                            Aprobar
-                        </button>
-                    </div>
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aprobar</button>
+                    <a class="btn btn-default" href="@Url.Action("Index","AprobacionMovimientoInventario",new { Area = "Inventario", IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega },null)">Cancelar</a>
                 </div>
             </div>
         </div>
+        <br />
     }
 
     Html.DevExpress().WebDocumentViewer(settings =>
@@ -30,59 +33,5 @@
         settings.MobileMode = false;
         settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
         settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml();
+    }).Bind(ViewBag.Reporte).GetHtml();
 }
-
-<script type="text/javascript">
-    function AprobarMovimiento() {
-        var datos = {
-            SecuencialID: $("#SecuencialID").val()
-            }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("AprobarMovimiento", "AprobacionMovimientoInventario", new { Area = "Inventario"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                if (data.length > 0) {
-                    alert(data);
-                    location.reload();
-                } else {
-                    alert("No se ha podido aprobar el movimiento de inventario");
-                }
-            },
-            error: function (error) {
-            }
-        });
-    }
-</script><script type="text/javascript">
-    function AprobarMovimiento() {
-        var datos = {
-            SecuencialID: $("#SecuencialID").val()
-            }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("AprobarMovimiento", "AprobacionMovimientoInventario", new { Area = "Inventario"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                if (data.length > 0) {
-                    alert(data);
-                    location.reload();
-                } else {
-                    alert("No se ha podido aprobar el movimiento de inventario");
-                }
-            },
-            error: function (error) {
-            }
-        });
-    }
-</script>
