--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_014.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_014.cshtml
@@ -60,7 +60,7 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal</label>
                             @*@Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
@@ -113,6 +113,17 @@
                         <div class="form-group">
                             <label for="IdCliente">Proveedor</label>
                             @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="mostrarAnulados"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Check1, settings =>
+                           {
+                               settings.Name = "Check1";
+                               settings.Text = "Grupo tarifa";
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Check1, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
@@ -182,6 +193,28 @@
                                settings.Text = "Mostrar anulados";
                            }).GetHtml()
                             @Html.ValidationMessageFor(q => q.mostrarAnulados, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="mostrarAnulados"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Check2, settings =>
+                           {
+                               settings.Name = "Check2";
+                               settings.Text = "Grupo código";
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Check2, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="mostrarAnulados"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Check3, settings =>
+                           {
+                               settings.Name = "Check3";
+                               settings.Text = "Grupo tiene retención";
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Check3, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
