--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -85,6 +85,9 @@
     @Html.HiddenFor(q => q.IdEstadoAprobacion)
     @Html.HiddenFor(q => q.info_comprobante.IdTipoCbte)
     @Html.HiddenFor(q => q.info_comprobante.IdCbteCble)
+    @Html.HiddenFor(q => q.IdEmpresa_cxp)
+    @Html.HiddenFor(q => q.IdTipoCbte_cxp)
+    @Html.HiddenFor(q => q.IdCbteCble_cxp)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="row">
@@ -100,21 +103,22 @@
                 <div class="form-group">
                     <label for="IdTipo_op">Tipo orden pago*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op, settings =>
-                       {
-                           settings.Name = "IdTipo_op";
-                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                           settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                           //Campo ID
-                           settings.Properties.ValueField = "IdTipo_op";
-                           settings.Properties.ValueType = typeof(string);
-                           settings.Properties.TextField = "Descricpion";
-                           //Boton para seleccionar ningun registro
-                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-                       }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                   {
+                       settings.Name = "IdTipo_op";
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                       settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                       settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                       //Campo ID
+                       settings.Properties.ValueField = "IdTipo_op";
+                       settings.Properties.ValueType = typeof(string);
+                       settings.Properties.TextField = "Descricpion";
+                       //Boton para seleccionar ningun registro
+                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                       settings.ReadOnly = true;
+                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -234,29 +238,12 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_datos_generales" aria-controls="informacion_general" role="tab" data-toggle="tab">Datos deuda a cancelar</a>
-            </li>
-
-            <li>
                 <a href="#tab_asiento_contable" aria-controls="contabilidad" role="tab" data-toggle="tab">Asiento contable</a>
             </li>
 
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_datos_generales">
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="co_observacion">Detalle de deuda a cancelar</label>
-                                @Html.Action("GridViewPartial_detalle_op")
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_asiento_contable">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_asiento_contable">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -312,7 +299,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_detalle_op.PerformCallback();
+                /*GridViewPartial_detalle_op.PerformCallback();*/
                 GridView_comprobante_detalle.PerformCallback();
             },
             error: function (error) {
