--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
@@ -188,7 +188,14 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="oc_observacion">#OP</label>
+                    @Html.TextBoxFor(q => q.oc_codigo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.oc_codigo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="oc_observacion">Observación</label>
                     @Html.TextBoxFor(q => q.oc_observacion, new { @class = "form-control" })
