--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
@@ -95,10 +95,11 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdOrdenCompra", "#Orden").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdOrdenCompra", "#Orden").Width = Unit.Percentage(8);
+        settings.Columns.Add("oc_codigo", "#OP").Width = Unit.Percentage(8);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
-        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(25);
-        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(20);
+        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(15);
         settings.Columns.Add("Total", "Total").Width = Unit.Percentage(10);
         settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
