--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
@@ -34,7 +34,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Columns.Add("IdOrdenCompra", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("SecuenciaTipo", "#Orden").Width = Unit.Percentage(5);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
