--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio.cshtml
@@ -95,7 +95,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdOrdenCompra", "#Orden").Width = Unit.Percentage(8);
+        settings.Columns.Add("SecuenciaTipo", "#Orden").Width = Unit.Percentage(8);
         settings.Columns.Add("oc_codigo", "#OP").Width = Unit.Percentage(8);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(20);
