--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_oc_x_ingresar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_oc_x_ingresar.cshtml
@@ -33,7 +33,8 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Columns.Add("inv_IdNumMovi", "# Documento").Width = Unit.Percentage(10);
+        settings.Columns.Add("SecuenciaTipo", "# Orden").Width = Unit.Percentage(10);
+        //settings.Columns.Add("inv_IdNumMovi", "# Documento").Width = Unit.Percentage(10);
         settings.Columns.Add("inv_Secuencia", "Secuencia").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
