--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_oc_x_ingresar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_oc_x_ingresar.cshtml
@@ -33,8 +33,8 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
 
-        settings.Columns.Add("IdOrdenCompra","ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("Secuencia", "# Documento").Width = Unit.Percentage(10);
+        settings.Columns.Add("SecuenciaTipo", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("Secuencia", "Secuencia").Width = Unit.Percentage(10);
         settings.Columns.Add(column => {
             column.Width = Unit.Percentage(10);
             column.FieldName = "oc_fecha";
