--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
@@ -81,7 +81,14 @@
         {
             column.FieldName = "ca_Categoria";
             column.Caption = "Categoria";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdProducto";
+            column.Caption = "ID";
+            column.Width = Unit.Percentage(5);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
